# Nexsus-prototype

./: README.md  docker-compose.yml  main.py  pyproject.toml  reqierment.txt
app/api/: api.py
app/bucket/: __init__.py  s3.py
app/document_processing/: __init__.py  document_processing.py
config/: __init__.py  settings.py
frontend/: streamlit_app.py
tests/: test_document_processing.py
utils/: __init__.py  helper.py
