[project]
name = "nexsus-prototype"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.139.0",
    "logfire>=4.37.0",
    "minio>=7.2.20",
    "pageindex>=0.2.8",
    "polling2>=0.5.0",
    "pydantic-settings>=2.14.2",
    "python-multipart>=0.0.32",
    "streamlit>=1.59.1",
    "uvicorn>=0.50.2",
]
